<resources>
    <string name="app_name">GreenFlag</string>
    <string name="sr_greenflag_customers">GreenFlag customers can create an account to access</string>
    <string name="sr_request">Request a rescue online</string>
    <string name="sr_policy">Policy information</string>
    <string name="sr_greenflag">GreenFlag</string>
    <string name="sr_no_matter">No Matter What</string>
    <string name="sr_car_health">Car health updates</string>
    <string name="sr_check">check</string>
    <string name="sr_flag">flag</string>
    <string name="sr_create_account">Create an account</string>
    <string name="sr_email_address">Email address</string>
    <string name="sr_create_password">Create password</string>
    <string name="sr_repeat_password">Repeat password</string>
    <string name="sr_email_address_hint">johnsmith@email.com</string>
    <string name="sr_create_password_hint">********</string>
    <string name="sr_repeat_password_hint">********</string>
    <string name="sr_pw_reqs">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lowercase letter. You can use special characters.</string>
    <string name="sr_next">Next</string>
    <string name="sr_create_an_account">Create an account</string>
    <string name="sr_back_to_front">back to front</string>
    <string name="sr_hiddenpw">********</string>
    <string name="sr_androidassignment1">AndroidAssignment1</string>
    <string name="sr_name">Name</string>
    <string name="sr_username">Username</string>
    <string name="sr_password">password</string>
    <string name="sr_change_photo">CHANGE PHOTO</string>
    <string name="sr_age">Age</string>
    <string name="sr_choose_birth_date">CHOOSE BIRTH DATE</string>
    <string name="sr_not_specified">Not Specified</string>
    <string name="sr_save">SAVE</string>
    <string name="sr_postal_address">Postal Address (Opt)</string>
    <string name="sr_gender">Gender</string>
    <string name="sr_username">Username</string>
    <string name="sr_change_photo">CHANGE PHOTO</string>
    <string name="sr_male">Male</string>
    <string name="sr_female">Female</string>
    <string name="sr_not_specified">Not Specified</string>
</resources>
