<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/gradient_button_background2x"
        android:text="@string/sr_next"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_pw_reqs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sr_pw_reqs"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sr_repeat_password_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sr_repeat_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_repeat_password"
        app:layout_constraintStart_toStartOf="@+id/et_repeat_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_repeat_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sr_create_password_hint" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_create_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sr_create_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_create_password"
        app:layout_constraintStart_toStartOf="@+id/et_create_password" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_create_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sr_email_address_hint"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sr_email_address"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email_address"
        app:layout_constraintStart_toStartOf="@+id/et_email_address" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_create_an_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/iv_back_to_front"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sr_back_to_front"
            app:srcCompat="@drawable/greenleftarrow" />

        <TextView
            android:id="@+id/tv_create_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sr_create_an_account"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="4dp" />


    </android.support.v7.widget.Toolbar>




</android.support.constraint.ConstraintLayout>